--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-typescript",
+  "name": "app-client",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -15,44 +15,44 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "@rneui/themed": "^4.0.0-rc.8",
-    "axios": "^1.6.7",
-    "expo": "^49.0.0",
+    "axios": "^1.6.8",
+    "expo": "^50.0.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.8.0",
-    "react": "18.2.0",
+    "firebase": "^10.10.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "^0.72.10",
     "react-native-country-flag": "^2.0.2",
     "react-native-divider": "^1.0.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-gifted-charts": "^1.4.7",
+    "react-native-gifted-charts": "^1.4.9",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-rapi-ui": "^0.2.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.4",
     "@types/react": "~18.2.45",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.1.3"
+    "typescript": "^5.4.5"
   },
   "private": true
 }
